src/pmt/css/PreferencesManagementTool.css
/*
	Font icons
*/
@font-face {
	font-family: 'icons-no-frames-aug-29';
	src:url('../fonts/icons-no-frames-aug-29.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

/*
	General preferences styling
*/
.preference {
	background:#ECEFEF;
	width: 340px;
}

.fl-uiOptions-category {
    width: 80%;
    margin: 0 auto;
    font-family: 'Open Sans', sans-serif;
}

.fl-uiOptions label::first-letter {
    text-transform: capitalize;
}

.fl-uiOptions label {
    font-size: 0.8em;
}

/*
	Header's styling
*/
.headerImage {
	-webkit-font-smoothing: antialiased;
	width: 330;
   	height:90;
   	margin-top: 4px !important;
	margin:5px;
    cursor:default;
	font-size: 90px !important;
	color: #566374;
	background-color: white;
}
input[type=checkbox] + .headerImage:before {
	content: "\e00e";
}

input[type=checkbox]:checked + .headerImage:before {
	content: "\e00d";
}

.adjusterGroupTitle {
	margin: 5px;
}

.headerTitle {
	font-family: 'Roboto Slab', serif;
	position: absolute; 
   	//top: 20px; 
   	left: 0; 
   	width: 100%;
   	color: white;
   	text-align: center;
}

input[type=checkbox], input[type=radio] {
    position: absolute;
    display: none;
    clip: rect(0 0 0 0);
    height:1px;
    width:1px;
    margin:-1px;
    padding:0;
    border:0;
}

input[type=checkbox] + .headerImage + label.headerTitle {
    //background: url('../images/increaseSizeHeader.png') no-repeat;
    background-size:330px 90px;
    //padding-left:30px;
    cursor:pointer;
    margin: 5px;
    font-size: 1.5em;
    text-align: center;
    //padding-left: 3px;
    color:white;
    display:inline-block;
    line-height:90px;
    height: 90px;
    width:330px;
}

input[type=checkbox]:checked + .headerImage + label.headerTitle {
    //background: url('../images/increaseSizeHeaderChecked.png') no-repeat;
    background-size:330px 90px;
    //padding-left:30px;
    cursor:pointer;
    margin: 5px;
    font-size: 1.5em;
    text-align: center;
    //padding-left: 3px;
    color:white;
    display:inline-block;
    line-height:90px;
    height: 90px;
    width:330px;
}

/*
	The adjusters' font icons
*/
.fl-adjuster-icons {
	float: left;
	font-family: 'icons-no-frames-aug-29';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;
	-webkit-font-smoothing: antialiased;
}
.fl-icon-small-cursor:before {
	font-size: 0.8em !important;
	content: "\e000";
}
.fl-icon-big-cursor:before {
	font-size: 1.9em !important;
	content: "\e000";
}
.fl-icon-small-cursor {
	width: 30px;
	text-align: right;
	padding-top: 0.25em;
}
.fl-icon-big-cursor {
	width: 35px;
	margin-top: -0.5em !important;
}

/*
	The slider's style
*/
.fl-uiOptions .fl-slider-horz {
    width: 200px;
    margin: 2px !important;
}

.fl-uiOptions .fl-slider a {
    //background: radial-gradient(circle 14.5px at 14.5px 50%, #566374 6px, white 8px);
    border: 1px solid #566374;
}

.fl-uiOptions .ui-slider-range {
    background-color: #17a9b8;
}

.fl-uiOptions .fl-slider a {
    box-shadow: none;
}

/*
	The plusMinusAdjuster style
*/
.flc-uiOptions-plus-minus-numerical-minus, .flc-uiOptions-plus-minus-numerical-plus {
	width: 10% !important;
	//height: 2em !important;
	font-size: 1.5em !important;
	cursor: pointer;
	text-align: center !important;
	background-color: white;
	margin-left: 2px !important;
	margin-right: 2px !important;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
	padding-top: 0.05em;
}

.flc-uiOptions-plus-minus-numerical-widget {
	width: 100% !important;
	background-color: #FFFFFF;
	display: table;
    //height: 2em;
}

.flc-uiOptions-plus-minus-numerical-value {
	width: 76% !important;
	border: none !important;
	//height: 2em !important;
	text-align: center !important;
	font-size: 1.5em !important;
}

/*
	Style for sliding to work
*/
.increaseSizePreferenceGroup {
	padding-top: 100px;
}

.fl-uiOptions-category {
	overflow: hidden;
}

.fl-uiOptions-category-hidden {
	overflow: hidden;
}

/*
	Style for more/less
*/
.moreLess{
	width:100% !important;
	text-align: center;
	cursor: pointer;
	padding-bottom: 5px !important;
}

/*
	Style for magnifier position font icons
*/
.fl-magnifierPosition-uio-icon-label {
	height: 4.7em !important;
	width: 6.3em !important;
	border: none !important;
	padding: 0 !important;
	cursor: pointer;
	background-color: white;
	margin-bottom: 0.5em !important;
	margin-right: 0.5em !important;
}

.fl-magnifierPosition-uio-icon {
	height: 0 !important;
	width: 0 !important;
	color: #636c7c;
	margin-top: -2px;
}

.fl-magnifierPosition-uio-icon:before {
	font-size: 5em !important;
}

.fl-magnifierPosition-uio-background {
	height: 4.9em !important;
	width: 6.3em !important;
	padding-top: 2px;
}

.fl-magnifierPosition-uio-background:before {
	font-size: 4.8em !important;
	content: "\e00b" !important;
}
	
.fl-magnifierPosition-uio-frame:before {
	font-size: 5em !important;
	content: "\e008" !important;
}

.fl-magnifierPosition-uio-lens > .fl-magnifierPosition-uio-icon:before {
	content: "\e00a";
} 

.fl-magnifierPosition-uio-fullscreen > .fl-magnifierPosition-uio-icon-main {
	opacity:0.5;
	position: relative;
	top: 0.15em;
	left: 0.15em;
}

.fl-magnifierPosition-uio-fullscreen > .fl-magnifierPosition-uio-icon-main:before {
	content: "\e009";
	font-size: 4.7em !important;
	color: #00a9bd;
}

.fl-magnifierPosition-uio-top > .fl-magnifierPosition-uio-icon-main:before {
	content: "\e005";
}

.fl-magnifierPosition-uio-bottom > .fl-magnifierPosition-uio-icon-main {
	transform:rotateX(180deg);
	-ms-transform:rotate(180deg); /* IE 9 */
	-webkit-transform:rotate(180deg); /* Safari and Chrome */
	position: relative;
	top: 5em;
}

.fl-magnifierPosition-uio-bottom > .fl-magnifierPosition-uio-icon-main:before {
	content: "\e005";
}

.fl-magnifierPosition-uio-left > .fl-magnifierPosition-uio-icon-main {
	transform:rotate(270deg) scaleX(0.8) scaleY(1.24);
	-ms-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* IE 9 */
	-webkit-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* Safari and Chrome */
	position: relative;
	top: 5.05em;
}

.fl-magnifierPosition-uio-left > .fl-magnifierPosition-uio-icon-main:before {
	content: "\e005";
}

.fl-magnifierPosition-uio-right > .fl-magnifierPosition-uio-icon-main {
	transform:rotate(90deg) scaleX(0.81) scaleY(1.24);
	//-ms-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* IE 9 */
	//-webkit-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* Safari and Chrome */
	position: relative;
	left: 6.3em;
	top: 0.07em;
}

.fl-magnifierPosition-uio-right > .fl-magnifierPosition-uio-icon-main:before {
	content: "\e005";
}

/*
	Style for magnifier position indicator
*/
.fl-uiOptions .fl-icon-indicator:before, .fl-uiOptions .fl-choice input:checked + div:before {
    content: "\e007";
}
.fl-uiOptions .fl-choice .fl-indicator {
    font-family: 'icons-no-frames-aug-29' !important;
    font-size: 0.8em;
 	color: #636c7c;
 	position: relative;
 	top: 0.4em;
    height: 1em !important;
    margin: -0.75em 0 0 2.15em !important;
    z-index: 1;
}

/*
	Style for magnifier follows font icons
*/
.fl-magnifierFollows-uio-icon-label {
	height: 7.7em !important;
	width: 6.5em !important;
	border: none !important;
	padding: 0 !important;
	cursor: pointer;
	background-color: white;
	margin-bottom: 0.5em !important;
	margin-right: 0.5em !important;	
}

.fl-magnifierFollows-uio-icon {
	font-size: 7.7em !important;
	color: #636c7c;
}

.fl-magnifierFollows-uio-mouseCursor > .fl-magnifierFollows-uio-icon {
}

.fl-magnifierFollows-uio-mouseCursor > .fl-magnifierFollows-uio-icon:before {
	content: "\e003";
}

.fl-magnifierFollows-uio-textCursor > .fl-magnifierFollows-uio-icon:before {
	content: "\e004";
}

.fl-magnifierFollows-uio-keyboardFocus > .fl-magnifierFollows-uio-icon:before {
	content: "\e006";
}

/*
	Style for magnifier follows checked font icons
*/
.fl-magnifierFollows-uio-icon-check {
	background-color: #636C7C;
    border-radius: 3px 3px 3px 3px;
    color: #FFFFFF;
    font-size: 1.2em;
    margin-left: 3.6em;
    margin-top: 4.7em;
    position: absolute;
    width: 1.5em;
}

input:checked + .flc-uiOptions-magnifierFollows-label > .fl-magnifierFollows-uio-icon-check {
    padding-bottom: 0.2em;
    padding-top: 0.2em;
    border: 1px solid;
}

input:checked + .flc-uiOptions-magnifierFollows-label > .fl-magnifierFollows-uio-icon-check:before {
	content: "\e002";
}

/*
	Style for magnifier follows legend
*/
.fl-magnifierFollows-legend {
	line-height: 1.1em;
	color: #566374;
}

.fl-magnifierFollows-legend::first-letter {
    text-transform: capitalize;
}

